2014-04-05  Maurice Berk <maurice@mauriceberk.com>

    * R/sme.R: sme.default and sme.list now store the normalizeTime argument in the sme object.
    getRoughnessMatrix() now properly takes into account scenarios where zeroIntercept and/or
    normalizeTime were used when fitting the model. plotSmeModel should now properly handle
    calculating drawing confidence bands when zeroIntercept was used when fitting the model

    * vignettes/Tutorial.Rnw: updated author's email address

2014-04-05  Maurice Berk <maurice@mauriceberk.com>

    * man/sme.Rd: added details concerning the specification of initial values for the smoothing
    parameter optimization

    * man/sme.data.frame.Rd: added details concerning the specification of initial values for the
    smoothing parameter optimization

    * man/sme.list.Rd: added details concerning the specification of initial values for the
    smoothing parameter optimization

    * R/sme.R: improved formatting. The call field of sme objects should now be more meaningful in
    cases where multiple fits were performed in one go. zeroIntercept is now properly implemented

    * src/SME.c: fixed a bug with the calculation of mu in MStep() where the penalty term was not
    correctly incorporating sigma^2. zeroIntercept is no longer used by the C code

    * src/SME.h: zeroIntercept is no longer used by the C code

2013-09-29  Maurice Berk <maurice@mauriceberk.com>

    * DESCRIPTION: Package version is now 0.9, Date is now 2013-09-29

    * R/sme.R: can now specify initial values for the smoothing parameters to be used in the NM
    optimization

    * src/SME.c: initial values for smoothing parameters in NM optimization are now taken as the
    lambdaMu and lambadV arguments to SMEOptimization(). Fixed a bug where abs() was used rather
    than fabs() causing all fractional smoothing parameters to be rounded

2013-07-20  Maurice Berk <maurice@mauriceberk.com>
